// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teleinfo component should render correctly with notif data 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-label"
      >
        Instant power:
      </span>
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      -
      <span
        className="teleinfo__power-value"
      >
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W(est.)
      </span>
    </p>
    <p
      className="teleinfo__intensity"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        3
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        30
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      >
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            base
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            1
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            10
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            wh
          </span>
        </li>
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            2
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            20
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            wh
          </span>
        </li>
      </ul>
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ...
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        ...
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
        (est.)
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start"
    >
      <span
        className="teleinfo__dates-start-label"
      >
        First data:
      </span>
      <span
        className="teleinfo__dates-start-value"
      >
        14:11:31, on 2023/01/24
      </span>
    </p>
    <p
      className="teleinfo__dates-last"
    >
      <span
        className="teleinfo__dates-last-label"
      >
        Last data:
      </span>
      <span
        className="teleinfo__dates-last-value"
      >
        12:15:26, on 2023/01/27
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly with notif data but without supplied power information 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-label"
      >
        Instant power:
      </span>
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      -
      <span
        className="teleinfo__power-value"
      >
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W(est.)
      </span>
    </p>
    <p
      className="teleinfo__intensity"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        ...
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        ...
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ...
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        ...
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
        (est.)
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start"
    >
      <span
        className="teleinfo__dates-start-label"
      >
        First data:
      </span>
      <span
        className="teleinfo__dates-start-value"
      >
        14:11:31, on 2023/01/24
      </span>
    </p>
    <p
      className="teleinfo__dates-last"
    >
      <span
        className="teleinfo__dates-last-label"
      >
        Last data:
      </span>
      <span
        className="teleinfo__dates-last-value"
      >
        12:15:26, on 2023/01/27
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly without notif data 1`] = `
<div
  className="teleinfo"
>
  <p
    className="teleinfo__no-data"
  >
    No data received yet.
  </p>
</div>
`;
